Atualizar o Register.html

--- a/Register.html
+++ b/Register.html
@@ -1,1 +1,32 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title></title>
+</head>
+<body>
+  <h1>Crie seu Receptaculo</h1>
+  <form>
+    <fieldset>
+      Nome: <input type="text"><br>
+      Email: <input type="email"><br>
+      Telefone: <input type="tel"><br>
+    </fieldset>
+    <fieldset>
+      usuario: <input type="text"><br>
+      Senha: <input type="password"><br>
+    </fieldset><button>Register</button><button>Login</button>
+  </form>
+  <p><strong>*responda as tasks*</strong></p>
+  <h3>Voce e afrodescendente?</h3>
+  <form>
+    sim<input type="checkbox">nao<input type="checkbox">
+  </form>
+  <p><strong>Grau da cor da pele</strong></p><strong>
+  <input type="range"><br></strong>
+  <p><strong><strong>Sua cor</strong><br>
+  <input type="color"><br></strong></p>
+  <div>
+    <h1>Pagina inicial</h1><a href="https://carlinhos-cavalos.vercel.app/">Pagina inicial</a>
+  </div>
+</body>
+</html>
