--- a/Register.html
+++ b/Register.html
@@ -4,7 +4,14 @@
   <title></title>
 </head>
 <body>
-  <h1>Crie seu Receptaculo</h1>
+<style>
+   body 
+{
+    background-color: gray;
+   
+}
+  </style>
+  <h1 style="color: red;">Crie seu Receptaculo</h1>
   <form>
     <fieldset>
       Nome: <input type="text"><br>
