Atualizar o Register.html

--- a/Register.html
+++ b/Register.html
@@ -11,6 +11,7 @@
    
 }
   </style>
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcVg-Dvamoa0RgR3dQ_H2EpP2H0TOq7SM7GQ&usqp=CAU" width="500" height="300" alt="images">
   <h1 style="color: red;">Crie seu Receptaculo</h1>
   <form>
     <fieldset>
